Add PlaybackSession queue transport and Maestro LotroAbc engine.
Wire library/setlist play-and-queue into the bottom player, resolve ABC paths from SQLite, and move JVM module exports into .mvn/jvm.config.

Co-authored-by: Cursor <cursoragent@cursor.com>